<resources>
    <string name="app_name">Trying Sketch</string>
    <string name="stroke">Stroke</string>
    <string name="eraser">Eraser</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="colors">Colors</string>

    <string name="erase_sketch">Erase sketch?</string>
    <string name="confirm">Confirm</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5098396899135570/1690670904</string>


</resources>