<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/sketch_stroke"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/stroke"
            android:src="@drawable/ic_brush_black_24dp" />

        <ImageView
            android:id="@+id/sketch_eraser"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/eraser"
            android:src="@drawable/ic_eraser_black_24dp" />

        <ImageView
            android:id="@+id/sketch_erase"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:contentDescription="@string/colors"
            android:src="@drawable/ic_delete_red_48dp" />

        <ImageView
            android:id="@+id/sketch_undo"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:alpha="0.4"
            android:background="@null"
            android:contentDescription="@string/undo"
            android:src="@drawable/ic_undo_black_24dp" />

        <ImageView
            android:id="@+id/sketch_redo"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:alpha="0.4"
            android:contentDescription="@string/redo"
            android:src="@drawable/ic_redo_black_24dp" />
        <ImageView
            android:id="@+id/sketch_save"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:alpha="0.4"
            android:contentDescription="Save"
            android:src="@drawable/vector_save" />
        <ImageView
            android:id="@+id/sketch_menu"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:alpha="0.95"
            android:contentDescription="Menu"
            android:src="@drawable/vector_menu" />


    </LinearLayout>

    <com.teamvoyager.simplesketch.SketchView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </com.teamvoyager.simplesketch.SketchView>

</LinearLayout>